uf-6575: Prepare for possibility to send as windowed envelope.