@@ -19,6 +19,7 @@ class SnailMailDtoTest {
                                 .withName("someName")
                                 .withContent("someContent")
                                 .withContentType("someContentType")
+                                .withSendAsWindowedEnvelope(true)
                                 .build()
                 ))
                 .withCitizenDto(CitizenDto.builder().build())
@@ -30,9 +31,10 @@ class SnailMailDtoTest {
         assertThat(request.getDepartment()).isEqualTo("someDepartment");
         assertThat(request.getAttachments()).satisfies(attachments -> {
             assertThat(attachments).hasSize(1);
-            assertThat(attachments.get(0).getName()).isEqualTo("someName");
-            assertThat(attachments.get(0).getContent()).isEqualTo("someContent");
-            assertThat(attachments.get(0).getContentType()).isEqualTo("someContentType");
+            assertThat(attachments.getFirst().getName()).isEqualTo("someName");
+            assertThat(attachments.getFirst().getContent()).isEqualTo("someContent");
+            assertThat(attachments.getFirst().getContentType()).isEqualTo("someContentType");
+            assertThat(attachments.getFirst().getSendAsWindowedEnvelope()).isTrue();
         });
     }
 }
